[project]
name = "pyhid-usb-relay"
dynamic = ["version"]
description = "A tool for controlling USB HID relays"
authors = [
    {name="Joshua Watt", email="JPEWhacker@gmail.com"},
]
maintainers = [
    {name="Joshua Watt", email="JPEWhacker@gmail.com"},
]
license = {file = "COPYING"}
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
required-python = ">= 3.8"
dependencies = [
    "xdg>=5.1.1",
    "pyusb>=1.2.1",
    "PyYAML>=6.0",
    "libusb>=1.0.26b5; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "pytest >= 7.4",
]

[project.urls]
Homepage = "https://github.com/JPEWdev/pyhid-usb-relay"
Repository = "https://github.com/JPEWdev/pyhid-usb-relay.git"
Issues = "https://github.com/JPEWdev/pyhid-usb-relay/issues"

[project.scripts]
pyhid-usb-relay = "pyhid_usb_relay.main:main"

[tool.hatch.version]
path = "src/pyhid_usb_relay/version.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
